<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    tools:context="com.example.activities.ProductsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#F1F1F1">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:layout_marginTop="124dp"
            android:textAlignment="center"
            android:text="@string/welcome"/>

        <LinearLayout
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_gravity="center"
                android:weightSum="2"
                android:layout_marginVertical="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:id="@+id/whiteWineBtn"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/homepage_white"
                        android:layout_width="100dp"
                        android:layout_height="100dp">
                    </ImageView>
                    <TextView
                        android:text="@string/white_wine"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:id="@+id/redWineBtn"
                    android:layout_weight="1"
                    android:orientation="vertical"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/homepage_red"
                        android:layout_width="100dp"
                        android:layout_height="100dp">
                    </ImageView>

                    <TextView
                        android:text="@string/red_wine"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:weightSum="2"
                android:layout_marginVertical="8dp"

                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/bubbleWineBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/homepage_sparkling"></ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bubble_wine"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/roseWineBtn"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/homepage_rose"
                        android:layout_width="100dp"
                        android:layout_height="100dp">
                    </ImageView>
                    <TextView
                        android:text="@string/rose_wine"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <Button
            android:id="@+id/goToCart"
            android:layout_margin="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/quantum_googred"
            android:text="Cart"/>

    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header_drawer"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/menu_nav">
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>